centralizar o botão de enviar

--- a/style.css
+++ b/style.css
@@ -123,15 +123,23 @@ textarea {
 }
 
 .botao {
-    display: block;
-    width: 60%;
-    margin: 1.1em auto;
     height: 2em;
     font-size: 1.1rem;
     background-color: #3d3d4b;
     border-color: #2a2a3d;
-    min-width: 300px;
     color: white;
+    max-width: 300px;
+    min-width: 180px;
+    display: block;
+    margin: auto;
+}
+
+.botao:hover {
+    cursor:pointer;
+}
+
+.botao:active {
+    box-shadow: 2px 2px 2px solid rgb(54, 47, 47);
 }
 
 input[type="file"] {
