--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ header {
     background-image: linear-gradient(to top, var(--cor1), var(--cor2), var(--cor3));
     text-align: center;
     padding-top: 10px;
+    margin-bottom: 20px;
 }
 
 header > h1 {
@@ -26,12 +27,13 @@ header > h1 {
   color: #fff;
   font-weight: 400px;
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.916);
-  margin-bottom: -10px;
+  margin-bottom: -20px;
 }
 
 nav {
     background-color: var(--cor1);
     padding: 40px 0px 0px 0px;
+    margin-top: -20px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.193);
     text-align: center;    
 }
