--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 
 header {
     min-height: 140px;
-    background-image: linear-gradient(to bottom, var(--cor1), var(--cor2), var(--cor3));
+    background-image: linear-gradient(to top, var(--cor1), var(--cor2), var(--cor3));
     text-align: center;
     padding: 40px 0px 30px 0px;
 }
@@ -30,7 +30,8 @@ header > h1 {
 }
 
 nav {
-    background-image: linear-gradient(to top, var(--cor1), var(--cor2), var(--cor3));
+    /*background-image: linear-gradient(to bottom, var(--cor1), var(--cor2), var(--cor3));*/
+    background-color: var(--cor1);
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.193);
     text-align: center;    
 }
