--- a/style.css
+++ b/style.css
@@ -30,8 +30,7 @@ header > h1 {
 }
 
 nav {
-    /*background-image: linear-gradient(to bottom, var(--cor1), var(--cor2), var(--cor3));*/
-    background-color: var(--cor1);
+    background-image: linear-gradient(to top, var(--cor1) 6%, var(--cor2), var(--cor1) 2.9%);
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.193);
     text-align: center;    
 }
