--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ main > p {
     padding-top: 30px;
     text-align: center;
     font-size: 1.15em;
+    padding-bottom: 10px;
 }
 
 form {
@@ -84,8 +85,9 @@ form {
 
 fieldset {
     border: none;
-    padding: 1.5rem 0;
+    padding:  0;
     border-bottom: 3px solid #3b3b4f;
+    margin-top: 20px;
 }
 
 fieldset:last-of-type {
